website title changed

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script> -->
 
-    <title>React App</title>
+    <title>Cifras</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
 
 
