--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+ <!-- Flatpickr CSS -->
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
+ <!-- Flatpickr JS -->
+ <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script> -->
 
     <title>Cifras</title>
